[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://src/gui/DowngradeChoice.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/gui/DowngradeScreen.gd" type="Script" id=3]

[node name="DowngradeScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.862745 )

[node name="Label" type="Label" parent="."]
margin_right = 360.0
margin_bottom = 150.0
text = "ENERGY DEPLETED
Select a downgrade"
align = 1
valign = 1

[node name="Choices" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -154.0
margin_right = 120.0
margin_bottom = 154.0

[node name="Choice1" parent="Choices" instance=ExtResource( 2 )]
margin_right = 240.0
margin_bottom = 100.0

[node name="Choice2" parent="Choices" instance=ExtResource( 2 )]
margin_top = 104.0
margin_right = 240.0
margin_bottom = 204.0

[node name="Choice3" parent="Choices" instance=ExtResource( 2 )]
margin_top = 208.0
margin_right = 240.0
margin_bottom = 308.0

[connection signal="pressed" from="Choices/Choice1" to="." method="_on_Choice1_pressed"]
[connection signal="pressed" from="Choices/Choice2" to="." method="_on_Choice2_pressed"]
[connection signal="pressed" from="Choices/Choice3" to="." method="_on_Choice3_pressed"]
